--- a/index.html
+++ b/index.html
@@ -1,43 +1,38 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Vintage Style Agency</title>
-    <style>
-        body {
-            font-family: 'Georgia', serif;
-            background-color: #f4f1ea;
-            color: #333;
-            line-height: 1.6;
-        }
-        header {
-            text-align: center;
-            padding: 40px;
-            background-color: #d6c6af;
-            border-bottom: 2px solid #8b7355;
-        }
-        h1 {
-            font-size: 2.5em;
-            color: #5c4d3d;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-        }
-        .container {
-            width: 80%;
-            margin: 0 auto;
-            padding: 20px;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" 
+      crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" 
+      rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" 
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" 
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+<title>Web Studio</title>
 </head>
+
 <body>
     <header>
-        <h1>Vintage Agency</h1>
+        <h1>Web Studio</h1>
         <p>Established Since 1920</p>
     </header>
+
     <div class="container">
         <h2>Welcome</h2>
         <p>Step into a world of timeless elegance...</p>
     </div>
+
+
+<main></main>
+
+
+<footer>
+    <p>© 2024 Web Studio. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
